crates/xabi/tests/ui/unsupported_shapes/data_borrowed_field.rs
#[xabi::data]
pub struct BadData {
    pub value: &'static str,
}

fn main() {}
